--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
             width: 250px;
             height: 100px;
             background-color: yellow;
-            border: 1px solid black;
+            /* border: 1px solid black; */
 
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             cursor: pointer;
-            transition: all ease-out 2000ms;
+            transition: all ease-out 200ms;
         }
 
         .box:hover{
-            background-color: blue;
-            box-shadow: 2px 2px 5px;
-            transition: all ease-in 2000ms;
+            background-color: black;
+            box-shadow: 20px 20px 33px rgb(0, 217, 255);
+            transition: all ease-in 200ms;
         }
     </style>
 </head>
@@ -43,5 +43,6 @@
         </div>
     </div>
     <script src="/index.js"></script>
+    <script src="/practice.js"></script>
 </body>
 </html>
